Implement: Update Topics and Update Homepage for Repositories